[#23] Avoid overflowing texts in changes properties

--- a/Frontend/src/components/styles/global.scss
+++ b/Frontend/src/components/styles/global.scss
@@ -4,4 +4,6 @@
     border-radius: 4px;
     padding: 3px;
     vertical-align: top;
+    white-space: pre-wrap;
+    word-break: break-word;
 }
